[package]
name = "knockknock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libknockknock"
path = "src/lib.rs"

[[example]]
name = "in-memory"
path = "examples/in-memory.rs"

[dev-dependencies]
fern = "0.6"

[dependencies]
base64 = "0.13"
chrono = "0.4"
hmac = "0.11"
futures = "0.3"
jwt = "0.15"
log = "0.4"
rand = "0.8"
rocket = { version = "0.5.0-rc", features = ["json", "secrets"] }
rust-embed = { version = "6.2.0", features = ["interpolate-folder-path"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
# tokio = { version = "1.12.0", features = ["full"] }
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["v4"]}

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
